--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="FrontendMentor Challenge N°3">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <main class="card">
+    
+    <div class="card-top">
+      <img src="./images/image-victor.jpg" alt="Victor">
+    </div>
 
-  80K
-  Followers
+    <div class="profil">
+      <H1>Victor Crest <span>26</span></H1>
+      <span>London</span>
+    </div>
 
-  803K
-  Likes
+    <div class="stats">
 
-  1.4K
-  Photos
-  <div class="attribution">
+      <div class="stats-title">
+        80K <span>Followers</span>
+      </div>
+      <div class="stats-title">
+        803K <span>Likes</span>
+      </div>
+      <div class="stats-title">
+        1.4K <span>Photos</span>
+      </div>
+
+    </div>
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
+  </main>
+
 </body>
+
 </html>
